- fixed emptylog message, which was not being shown when needed
- template: hide the first release when it has only invisible lines
- added initial man page
- allow resorting changelog entries through the config option sort in the
  log section
- added rpmlog options: -o to append the old changelog, -p to append the
  changelog found in the spec, and -s to resort all changelog entries
- fixed bad url used when using -v in getsrpm
- make 'repsys submit' without package name or revision number work again
- if REPSYS_CONF is set, /etc/repsys.conf and ~/.repsys/config will not be
  readed anymore
- sort the final changelog by enabling the option sort in the log section
- merge the changelog found in the spec by enabling the option merge-spec
  in the log section
- changed the built-in template to the current default.chlog
- added option -d to repsys sync, to download the missing source files
- added option -F to repsys ci to set a log message file
- added option --strict to getsrpm to check if the revision provided
  matches the package URL;
- added boolean configuration option strict-revision in the submit
  section, to allow forcing the use of --strict
- added option --list in create-srpm to list the available targets
- make submit -l work on svn+ssh:// targets
- the fix for the unreleased commits problem in the previous release was
  wrong, really fixed it
- moved all configuration options that will hardly be changed to
  repsys-example.conf; we now have a shorter repsys.conf
- fixed the use of file:/// URLs when using just the package name
- don't give the wrong message "invalid command 'CMD'" when this is not
  the case
- added more help messages in subcommands

* 1.6.19
- added complement for SILENT: CLOG, which hides everything that does not
  start with this token
- fixed generation of unreleased commits, it was using the previous
  markrelease revision as reference
- added option -o to 'co' to disable the use of mirror when checking out

* 1.6.18