@@ -41,7 +41,7 @@ checkout a package
 .IP "\fBci\fP"
 commit changes
 .IP "\fBsubmit\fP"
-submit a package in a given revision for build
+submit a package in a given revision for build and release
 .IP "\fBsync\fP"
 add-remove all file changes from the .spec
 .IP "\fBgetspec\fP"
