@@ -14,6 +14,8 @@
   log section
 - added rpmlog options: -o to append the old changelog, -p to append the
   changelog found in the spec, and -s to resort all changelog entries
+- allow submitting many packages at once
+- package revisions in submit are now specified with name@nnn
 - fixed bad url used when using -v in getsrpm
 - make 'repsys submit' without package name or revision number work again
 - if REPSYS_CONF is set, /etc/repsys.conf and ~/.repsys/config will not be
